Fix search bar selectable when invisible

--- a/multimodal-ui/src/app/components/visualizer/visualizer.component.css
+++ b/multimodal-ui/src/app/components/visualizer/visualizer.component.css
@@ -84,6 +84,10 @@
   width: calc(100% - 1rem - 20rem - 1rem - 1rem);
 }
 
+.search-form {
+  width: 100%;
+}
+
 /* .map-layers {
   max-width: 30rem;
 } */
